fix ion-segment alignment

--- a/src/app/categories-list/categories-list.page.scss
+++ b/src/app/categories-list/categories-list.page.scss
@@ -4,7 +4,7 @@ ion-segment-button {
 
 ion-segment {
   display: flex;
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .guides {
